bitfield/tests/08-non-power-of-two.stderr
error: Number of variants must be power of two
  --> tests/08-non-power-of-two.rs:11:10
   |
11 | pub enum Bad {
   |          ^^^
